--- a/calligraphy.html
+++ b/calligraphy.html
@@ -110,14 +110,14 @@
 			<legend style="font-size: 2rem;font-weight: 700;">Chinese Calligraphy</legend>
 		</fieldset>
 
-		<div class="arts-cover-box flex-row align-center">
+		<!-- <div class="arts-cover-box flex-row align-center">
 			<div class="arts-cover-img"><img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/4bf6eb3c-b0a4-4be0-a154-c44f9bba9288.png" /></div>
 			<div class="arts-cover-icon flex-row align-center justify-center">
 				=
 			</div>
 			<div class="arts-cover-text flex-row align-center">YUQI</div>
 			
-		</div>
+		</div> -->
 
 		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
 			<legend style="font-size: 1.5rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Participating in Calligraphy Exhibitions all over the country</legend>
@@ -135,11 +135,11 @@
 		<p class="arts-p">From facsimiling tablet inscriptions to creating own scripts, from seal script to official script to cursive script to running script to regular script, the culture contained in tablets has witnessed the change of dynasties and the development of civilization. </p>
 	
 		<div class="kungfu-imgs-5 flex-row">
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/9902d646-3c32-4684-b681-ade0accd7ff7.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/46ce0eec-2634-45a1-bbb4-944fcb2ea10a.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/16d1caa3-1014-4cd5-87d9-794d3d21fcfd.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/a3c86fd5-29ba-4d6b-8abf-a9c6facdcddc.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/dc8b116a-da7a-4199-aed1-b93edf75f9c1.png" />
+			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/1ec0556f-df4b-4045-9881-ca55f10f0230.png" />
+			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/89739a2c-2c7d-46c5-b5a6-fc3d4c42a9cf.png" />
+			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/853ff888-c76b-45e4-861c-0254e46f81ec.png" />
+			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/43c53b6e-adf6-49cb-9869-486f9f663144.png" />
+			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/77524c7d-e40f-4cc9-8145-53e8d9614bed.png" />
 		</div>
 
 		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
