--- a/calligraphy.html
+++ b/calligraphy.html
@@ -123,35 +123,71 @@
 			<legend style="font-size: 1.5rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Participating in Calligraphy Exhibitions all over the country</legend>
 		</fieldset>
 
-		<p style="width: 100%;text-align: center;font-size: 1.4rem;">International Culture Exhibition in China Sculpture Museum</p>
-		
+		<ul class="layui-timeline" style="width: 90%;margin-left: 30px;margin-top: 3rem;">
+			<li class="layui-timeline-item">
+			  <i class="layui-icon layui-timeline-axis"></i>
+			  <div class="layui-timeline-content layui-text">
+				<h3 class="layui-timeline-title">2014 & 2015 & 2016 & 2017</h3>
+				<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;border: 0;">
+					<blockquote class="layui-elem-quote">
+						<p style="text-indent: 0 !important;">
+							International Culture Exhibition in China Sculpture Museum
+						</p>
+					</blockquote>
 
-		<div class="kungfu-wall-box">
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/9d41b94c-856c-478a-b905-3c0f105f69a7.png" /> 
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/e4cefbd2-1112-45d8-a31c-4d7b65c50b63.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/fce78c74-6cfc-4d6c-8194-bb56e606b56b.png" /> 
-		</div>
+					<div class="kungfu-wall-box">
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/82600e53-a7a1-4d10-833f-2a66238bfbc3.png" /> 
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/e4cefbd2-1112-45d8-a31c-4d7b65c50b63.png" />
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/497a960a-35df-4333-bd72-65b9b75a4a27.png" /> 
+					</div>
 
-		<p class="arts-p">From facsimiling tablet inscriptions to creating own scripts, from seal script to official script to cursive script to running script to regular script, the culture contained in tablets has witnessed the change of dynasties and the development of civilization. </p>
+
+
+				</fieldset>
+				
+			  </div>
+			</li>
+			<li class="layui-timeline-item">
+			  <i class="layui-icon layui-timeline-axis"></i>
+			  <div class="layui-timeline-content layui-text">
+				<h3 class="layui-timeline-title">2018 & 2019 & 2020 & 2021</h3>
+					<blockquote class="layui-elem-quote">
+						<p style="text-indent: 0 !important;">
+							From facsimiling tablet inscriptions to creating own scripts, from seal script to official script to cursive script to running script to regular script, the culture contained in tablets has witnessed the change of dynasties and the development of civilization. 
+						</p>
+					</blockquote>
+
+					<div class="kungfu-imgs-5 flex-row">
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/1ec0556f-df4b-4045-9881-ca55f10f0230.png" />
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/89739a2c-2c7d-46c5-b5a6-fc3d4c42a9cf.png" />
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/853ff888-c76b-45e4-861c-0254e46f81ec.png" />
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/43c53b6e-adf6-49cb-9869-486f9f663144.png" />
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/77524c7d-e40f-4cc9-8145-53e8d9614bed.png" />
+					</div>
+
+			  </div>
+			</li>
+		</ul>  
+
 	
-		<div class="kungfu-imgs-5 flex-row">
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/1ec0556f-df4b-4045-9881-ca55f10f0230.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/89739a2c-2c7d-46c5-b5a6-fc3d4c42a9cf.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/853ff888-c76b-45e4-861c-0254e46f81ec.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/43c53b6e-adf6-49cb-9869-486f9f663144.png" />
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/77524c7d-e40f-4cc9-8145-53e8d9614bed.png" />
-		</div>
+		
 
 		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
 			<legend style="font-size: 1.5rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Practice and Perception</legend>
 		</fieldset>
 
-		<p class="arts-p">I'm severely addicted to "diving" into the realm of calligraphy and seal-cutting because it allows me to constantly experience the fluidity of each stroke, the vividness of each word, and the joy of sprinkling ink. I was five years old when I first became addicted.</p>
-		<p class="arts-p">I was inspired to refrain from doing the same in my own life by the necessity of never overfilling a stroke in calligraphy and of leaving some white space in some of the strokes. I've learned to cherish the times when my mind is uncluttered. In addition to appreciating life and nature while learning calligraphy, I've also come to value my alone time.</p>
-		
+		<blockquote class="layui-elem-quote" style="width: 90%;margin: 0 auto;">
+			<p style="">
+				I'm severely addicted to "diving" into the realm of calligraphy and seal-cutting because it allows me to constantly experience the fluidity of each stroke, the vividness of each word, and the joy of sprinkling ink. I was five years old when I first became addicted.
+			</p>
+			<p style="">
+				I was inspired to refrain from doing the same in my own life by the necessity of never overfilling a stroke in calligraphy and of leaving some white space in some of the strokes. I've learned to cherish the times when my mind is uncluttered. In addition to appreciating life and nature while learning calligraphy, I've also come to value my alone time.
+			</p>
+		</blockquote>
+
         <div class="kungfu-wall-box-2">
 			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/471445f4-a7ac-4170-986f-1bdbf9d11c41.png" /> 
-			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/afdfa5e1-225a-4196-a2d9-b9a0a01e89ea.png" />
+			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/d1ab1661-0cbb-4b49-8923-bfd356cfcc86.png" />
 			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/b9766694-5e11-45c5-a0e9-f953110e6bc7.png" /> 
 		</div>
 
