--- a/calligraphy.html
+++ b/calligraphy.html
@@ -127,13 +127,13 @@
 			<li class="layui-timeline-item">
 			  <i class="layui-icon layui-timeline-axis"></i>
 			  <div class="layui-timeline-content layui-text">
-				<h3 class="layui-timeline-title">2014 & 2015 & 2016 & 2017</h3>
+				<h3 class="layui-timeline-title"></h3>
 				<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;border: 0;">
-					<blockquote class="layui-elem-quote">
-						<p style="text-indent: 0 !important;">
+					
+						<p class="layui-elem-quote-p" style="text-indent: 0 !important;">
 							International Culture Exhibition in China Sculpture Museum
 						</p>
-					</blockquote>
+
 
 					<div class="kungfu-wall-box">
 						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/82600e53-a7a1-4d10-833f-2a66238bfbc3.png" /> 
@@ -150,12 +150,12 @@
 			<li class="layui-timeline-item">
 			  <i class="layui-icon layui-timeline-axis"></i>
 			  <div class="layui-timeline-content layui-text">
-				<h3 class="layui-timeline-title">2018 & 2019 & 2020 & 2021</h3>
-					<blockquote class="layui-elem-quote">
-						<p style="text-indent: 0 !important;">
+				<h3 class="layui-timeline-title"></h3>
+		
+						<p class="layui-elem-quote-p" style="text-indent: 0 !important;">
 							From facsimiling tablet inscriptions to creating own scripts, from seal script to official script to cursive script to running script to regular script, the culture contained in tablets has witnessed the change of dynasties and the development of civilization. 
 						</p>
-					</blockquote>
+			
 
 					<div class="kungfu-imgs-5 flex-row">
 						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/1ec0556f-df4b-4045-9881-ca55f10f0230.png" />
