--- a/kungfu.html
+++ b/kungfu.html
@@ -117,7 +117,7 @@
 			<img style="width: 100%;margin: 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/e852ec58-a7ee-4cdf-90f1-398ce9aaec73.png" />
 		</div>
 		<img style="width: 100%;margin: 110px 0 12px 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/91b0868e-d537-4221-b844-e1c140ed3dfd.png" />
-		<p class="kungfu-p">( ChinaDaily: <a><span>https://mp.weixin.qq.com/s/EkZUvu51hwkxN5qG-PpDFQ</span></a> ) </p>
+		<p class="kungfu-p" style="text-align: center !important;">( ChinaDaily: <a><span>https://mp.weixin.qq.com/s/EkZUvu51hwkxN5qG-PpDFQ</span></a> ) </p>
 
 
 
