--- a/dream.html
+++ b/dream.html
@@ -115,7 +115,7 @@
 
 
 		<blockquote class="layui-elem-quote" style="margin-left: 2em;">
-			<p>During my travels to 16 provinces in China and 8 other countries, I discovered my fascination with nature and a sense of freedom. I'm more accepting of the whole world now that I have experienced many races, ethnicities, and viewpoints.</p>
+			<p>During my travels to 16 provinces in China and overseas study tours in 5 countries, I discovered my fascination with nature and a sense of freedom. I'm more accepting of the whole world now that I have experienced many races, ethnicities, and viewpoints.</p>
 			<p>My ability to bounce, which is also a talent employed in martial arts flips, allowed me to take 2nd place in the intercollegiate "sandpit jumping" competition.</p>
 		</blockquote>
 		
