--- a/kungfu.html
+++ b/kungfu.html
@@ -169,7 +169,9 @@
 		</ul>  
 
 		
-		<div style="height: 100px;width:100%"></div>
+		<div style="height: 100px;width:90%;margin: 0 auto;justify-content: flex-end;" class="flex-row align-center">
+			<a class="next-page-link" href="chorus.html"><p>Skip to The Next Page &nbsp;&nbsp;<i class="layui-icon layui-icon-right"></i> </p></a> 
+		</div>
         
         
     </div>
