--- a/academic.html
+++ b/academic.html
@@ -154,7 +154,9 @@
 		<p>This article clarifies the different roles of the four participating actors: family, community, school, and telemedicine in the health management of adolescent Non-communicable Diseases (NCD) patients, and proposes reflections on their future directions in the health management of adolescent diabetes mellitus, to help adolescent chronic disease patients adjust to "normalcy" in their physical, psychological, academic, and social lives as soon as possible. The aim is to help adolescents with chronic disease adjust to a "normal state" in terms of physical, psychological, academic, and social life. </p>
 
 
-		<div style="width: 100%;height: 100px"></div>
+		<div style="height: 100px;width:90%;margin: 50px auto 0 auto;justify-content: flex-end;" class="flex-row align-center">
+			<a class="next-page-link" href="about.html"><p>Skip to The Next Page &nbsp;&nbsp;<i class="layui-icon layui-icon-right"></i> </p></a> 
+		</div>
         
     </div>
     
