--- a/dream.html
+++ b/dream.html
@@ -269,8 +269,9 @@
 			</div>
 		</div>
 
-		<div style="height: 150px;width: 100%;"></div>
-
+		<div style="height: 100px;width:90%;margin: 50px auto 0 auto;justify-content: flex-end;" class="flex-row align-center">
+			<a class="next-page-link" href="academic.html"><p>Skip to The Next Page &nbsp;&nbsp;<i class="layui-icon layui-icon-right"></i> </p></a> 
+		</div>
         
         
     </div>
